--- a/src/index.html
+++ b/src/index.html
@@ -302,6 +302,55 @@
 				</div>
 				<div class="swiper-slide fifth-screen">
 					<div class="wrapper">
+						<div class="swiper review">
+							<div class="swiper-wrapper">
+							  <div class="swiper-slide review__slide">
+								  <img class="review__img" src="img/1.webp" alt="">
+								  <div class="review__body">
+									  <h3 class="review__title">Красивый текст отзыва</h3>
+									  <div class="review__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+									  <div class="review__name">Автор отзыва</div>
+								  </div>
+							  </div>
+							  <div class="swiper-slide review__slide">
+								<img class="review__img" src="img/2.webp" alt="">
+								  <div class="review__body">
+									  <h3 class="review__title">Красивый текст отзыва</h3>
+									  <div class="review__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+									  <div class="review__name">Автор отзыва</div>
+								  </div>
+							  </div>
+							  <div class="swiper-slide review__slide">
+								<img class="review__img" src="img/3.webp" alt="">
+								  <div class="review__body">
+									  <h3 class="review__title">Красивый текст отзыва</h3>
+									  <div class="review__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+									  <div class="review__name">Автор отзыва</div>
+								  </div>
+							  </div>
+							  <div class="swiper-slide review__slide">
+								<img class="review__img" src="img/4.webp" alt="">
+								  <div class="review__body">
+									  <h3 class="review__title">Красивый текст отзыва</h3>
+									  <div class="review__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+									  <div class="review__name">Автор отзыва</div>
+								  </div>
+							  </div>
+							  <div class="swiper-slide review__slide">
+								<img class="review__img" src="img/5.webp" alt="">
+								  <div class="review__body">
+									  <h3 class="review__title">Красивый текст отзыва</h3>
+									  <div class="review__text">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									  </div>
+									  <div class="review__name">Автор отзыва</div>
+								  </div>
+							  </div>
+							</div>
+							<div class="swiper-prev"></div>
+							<div class="swiper-next"></div>
+						  </div>
 					</div>
 				</div>
 				<div class="swiper-slide six-screen">
