Finished desctop version

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 				<div class="swiper-slide first-screen">
 					<div class="wrapper first-screen__wrapper">
 						<h1 class="first-screen__title"><span class="top">Ольга</span> <span class="bottom">Фадеева</span></h1>
-						<p class="rirst-screen__slogan">ПРАЗДНИК, КОТОРЫЙ ОСТАНЕТСЯ В СЕРДЦЕ КАЖДОГО</p>
+						<p class="first-screen__slogan">ПРАЗДНИК, КОТОРЫЙ ОСТАНЕТСЯ В СЕРДЦЕ КАЖДОГО</p>
 					</div>
 				</div>
 				<div class="swiper-slide second-screen">
@@ -94,7 +94,7 @@
 								</div>
 								<div class="forth-screen__body">
 									<div class="forth-screen__body-header">
-										<h4>ВЫЕЗДНАЯ ЦЕРЕМОНИЯ</h4>
+										<h4>СВАДЬБА</h4>
 										<button class="forth-screen__body-close" type="button">
 											<img src="img/cross-mark.svg" alt="Закрыть">
 										</button>
@@ -164,7 +164,7 @@
 								</div>
 								<div class="forth-screen__body">
 									<div class="forth-screen__body-header">
-										<h4>ВЫЕЗДНАЯ ЦЕРЕМОНИЯ</h4>
+										<h4>ЮБИЛЕЙ / ДЕНЬ РОЖДЕНИЯ</h4>
 										<button class="forth-screen__body-close" type="button">
 											<img src="img/cross-mark.svg" alt="Закрыть">
 										</button>
@@ -199,7 +199,7 @@
 								</div>
 								<div class="forth-screen__body">
 									<div class="forth-screen__body-header">
-										<h4>ВЫЕЗДНАЯ ЦЕРЕМОНИЯ</h4>
+										<h4>КОРПОРАТИВНЫЙ ПРАЗДНИК</h4>
 										<button class="forth-screen__body-close" type="button">
 											<img src="img/cross-mark.svg" alt="Закрыть">
 										</button>
@@ -234,7 +234,7 @@
 								</div>
 								<div class="forth-screen__body">
 									<div class="forth-screen__body-header">
-										<h4>ВЫЕЗДНАЯ ЦЕРЕМОНИЯ</h4>
+										<h4>ВЫПУСКНОЙ</h4>
 										<button class="forth-screen__body-close" type="button">
 											<img src="img/cross-mark.svg" alt="Закрыть">
 										</button>
@@ -269,7 +269,7 @@
 								</div>
 								<div class="forth-screen__body">
 									<div class="forth-screen__body-header">
-										<h4>ВЫЕЗДНАЯ ЦЕРЕМОНИЯ</h4>
+										<h4>РЕКЛАМНАЯ АКЦИЯ</h4>
 										<button class="forth-screen__body-close" type="button">
 											<img src="img/cross-mark.svg" alt="Закрыть">
 										</button>
@@ -355,6 +355,27 @@
 				</div>
 				<div class="swiper-slide six-screen">
 					<div class="wrapper">
+						<h2 class="six-screen__title">Обсудим ваш праздник за чашечкой чая?  ;)</h2>
+						<form action="" class="six-screen__form">
+							<div class="six-screen__form-items">
+								<div class="six-screen__form-item">
+									<input id="name" type="text" class="six-screen__form-input">
+									<label for="name" class="six-screen__form-label">Имя</label>
+								</div>
+								<div class="six-screen__form-item">
+									<input id="contacts" type="text" class="six-screen__form-input">
+									<label for="contacts" class="six-screen__form-label">Телефон/Email</label>
+								</div>
+								<div class="six-screen__form-item">
+									<textarea name="text" id="text" rows="4" class="six-screen__form-input"></textarea>
+									<label for="text" class="six-screen__form-label">Кратко опиши свой праздник</label>
+								</div>
+							</div>
+							<div class="six-screen__form-footer">
+								<button class="button">ЗАКАЗАТЬ ПРАЗДНИК</button>
+								<p class="six-screen__form-prim">Нажимая кнопку «Заказать праздник», вы даете согласие на обработку своих персональных данных</p>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
