Add adaptive for header

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 	@@include('components/page-blocks/_header.html')
 	<main class="main">
-		<div id="home-slider">
+		<div class="slider">
 			<div class="swiper-container">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide first-screen">
