Fix mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 						<p class="first-screen__slogan">ПРАЗДНИК, КОТОРЫЙ ОСТАНЕТСЯ В СЕРДЦЕ КАЖДОГО</p>
 					</div>
 				</div>
-				<div class="swiper-slide second-screen">
+				<div id="about" class="swiper-slide second-screen">
 					<div class="wrapper">
 						<p class="second-screen__slogan">Привет, я Ольга Фадеева – создаю яркие мероприятия, которые останутся в сердце каждого! <img src="img/heart.svg" alt="в сердце каждого" height="30" width="30"></p>
 						<div class="second-screen__block">
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide third-screen">
+				<div id="work" class="swiper-slide third-screen">
 					<div class="wrapper">
 						<h2 class="third-screen__title">Итак, Что нас ждет</h2>
 						<ul class="third-screen__list">
@@ -84,7 +84,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="swiper-slide forth-screen">
+				<div id="price" class="swiper-slide forth-screen">
 					<div class="wrapper">
 						<ul class="forth-screen__list">
 							<li class="forth-screen__item">
@@ -300,7 +300,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="swiper-slide fifth-screen">
+				<div id="reviews" class="swiper-slide fifth-screen">
 					<div class="wrapper">
 						<div class="swiper review">
 							<div class="swiper-wrapper">
@@ -353,7 +353,7 @@
 						  </div>
 					</div>
 				</div>
-				<div class="swiper-slide six-screen">
+				<div id="contacts" class="swiper-slide six-screen">
 					<div class="wrapper">
 						<h2 class="six-screen__title">Обсудим ваш праздник за чашечкой чая?  ;)</h2>
 						<form action="" class="six-screen__form">
